# staging

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
staging/: Cargo.toml
staging/examples/: named_struct.rs
staging/src/: lib.rs
staging_core/: Cargo.toml
staging_core/src/: lib.rs
staging_macro/: Cargo.toml
staging_macro/src/: lib.rs
