[package]
name = "staging"
version = "0.1.0"
edition = "2024"
authors = ["Ted Driggs <tdriggs@outlook.com>"]
license = "MIT"
description = "Procedural macro for better validation"
repository = "https://github.com/TedDriggs/staging"

[dependencies]
staging_core = { path = "../staging_core", version = "=0.1.0" }
staging_macro = { path = "../staging_macro", version = "=0.1.0" }
